--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2008-08-17  Damon Chaplin  <damon@gnome.org>
 
+	* src/goocanvasgroup.c (goo_canvas_group_add_child)
+	(goo_canvas_group_remove_child): emit the "children_changed" ATK
+	signal, if ATK is enabled. This needs testing.
+
+2008-08-17  Damon Chaplin  <damon@gnome.org>
+
 	* src/Makefile.am (INCLUDES): 
 	* demo/Makefile.am (INCLUDES): get rid of the XXX_DISABLE_DEPRECATED
 	flags so we don't break compilation when GTK+ deprecates stuff. #548086
