--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2008-09-02  Damon Chaplin  <damon@gnome.org>
+
+	* src/goocanvastable.c (goo_canvas_table_paint): use the item's
+	fill and stroke colors for the table background and grid.
+
+	* demo/table-demo.c: test the above.
+
 2008-08-17  Damon Chaplin  <damon@gnome.org>
 
 	* src/goocanvasgroup.c (goo_canvas_group_add_child)
