--- a/po/ja.po
+++ b/po/ja.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: GooCanvas CVS\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2008-04-27 12:49+0100\n"
+"POT-Creation-Date: 2008-09-09 20:33+0100\n"
 "PO-Revision-Date: 2008-04-28 20:42+0900\n"
 "Last-Translator: kou@cozmixng.org <kou@cozmixng.org>\n"
 "Language-Team:\n"
@@ -91,7 +91,8 @@ msgstr "自動境界計算"
 msgid ""
 "If the bounds are automatically calculated based on the bounds of all the "
 "items in the canvas"
-msgstr "キャンバスのすべてのアイテムの境界を元にして自動的に境界を計算するかどうか"
+msgstr ""
+"キャンバスのすべてのアイテムの境界を元にして自動的に境界を計算するかどうか"
 
 #: src/goocanvas.c:331
 msgid "Bounds From Origin"
@@ -319,7 +320,8 @@ msgstr "ストローク用パターン"
 msgid ""
 "The pattern to use to paint the perimeter of the item, or NULL disable "
 "painting"
-msgstr "アイテムの境界線を塗りつぶすために使うパターン。塗りつぶさない場合はNULL"
+msgstr ""
+"アイテムの境界線を塗りつぶすために使うパターン。塗りつぶさない場合はNULL"
 
 #: src/goocanvasitemsimple.c:132
 msgid "Fill Pattern"
@@ -431,7 +433,9 @@ msgstr "ストローク用の色"
 msgid ""
 "The color to use for the item's perimeter. To disable painting set the "
 "'stroke-pattern' property to NULL"
-msgstr "アイテムの境界線の色。塗りつぶさない場合は'stroke-pattern'プロパティをNULLにする"
+msgstr ""
+"アイテムの境界線の色。塗りつぶさない場合は'stroke-pattern'プロパティをNULLに"
+"する"
 
 #: src/goocanvasitemsimple.c:232
 msgid "Stroke Color RGBA"
@@ -441,7 +445,9 @@ msgstr "ストローク用のRGBA表現の色"
 msgid ""
 "The color to use for the item's perimeter, specified as a 32-bit integer "
 "value. To disable painting set the 'stroke-pattern' property to NULL"
-msgstr "32ビットの整数値で指定するアイテムの境界線の色。塗りつぶさない場合は'stroke-pattern'プロパティをNULLにする"
+msgstr ""
+"32ビットの整数値で指定するアイテムの境界線の色。塗りつぶさない場合は'stroke-"
+"pattern'プロパティをNULLにする"
 
 #: src/goocanvasitemsimple.c:239
 msgid "Stroke Pixbuf"
@@ -451,7 +457,9 @@ msgstr "ストローク用のPixbuf"
 msgid ""
 "The pixbuf to use to draw the item's perimeter. To disable painting set the "
 "'stroke-pattern' property to NULL"
-msgstr "アイテムの境界線を描画するために使うPixbuf。描画しない場合は'stroke-pattern'プロパティをNULLにする"
+msgstr ""
+"アイテムの境界線を描画するために使うPixbuf。描画しない場合は'stroke-"
+"pattern'プロパティをNULLにする"
 
 #: src/goocanvasitemsimple.c:246
 msgid "Fill Color"
@@ -461,7 +469,9 @@ msgstr "塗りつぶしの色"
 msgid ""
 "The color to use to paint the interior of the item. To disable painting set "
 "the 'fill-pattern' property to NULL"
-msgstr "アイテムの内側を塗りつぶすために使う色。塗りつぶさない場合は'fill-pattern'プロパティをNULLにする"
+msgstr ""
+"アイテムの内側を塗りつぶすために使う色。塗りつぶさない場合は'fill-pattern'プ"
+"ロパティをNULLにする"
 
 #: src/goocanvasitemsimple.c:253
 msgid "Fill Color RGBA"
@@ -471,7 +481,9 @@ msgstr "塗りつぶし用のRGBA表現の色"
 msgid ""
 "The color to use to paint the interior of the item, specified as a 32-bit "
 "integer value. To disable painting set the 'fill-pattern' property to NULL"
-msgstr "32ビットの整数値で指定するアイテムの内側を塗りつぶすために使う色。塗りつぶさない場合は'fill-pattern'プロパティをNULLにする"
+msgstr ""
+"32ビットの整数値で指定するアイテムの内側を塗りつぶすために使う色。塗りつぶさ"
+"ない場合は'fill-pattern'プロパティをNULLにする"
 
 #: src/goocanvasitemsimple.c:260
 msgid "Fill Pixbuf"
@@ -481,7 +493,9 @@ msgstr "塗りつぶし用Pixbuf"
 msgid ""
 "The pixbuf to use to paint the interior of the item. To disable painting set "
 "the 'fill-pattern' property to NULL"
-msgstr "アイテムの内側を塗りつぶすために使うPixbuf。塗りつぶさない場合は'fill-pattern'プロパティをNULLにする"
+msgstr ""
+"アイテムの内側を塗りつぶすために使うPixbuf。塗りつぶさない場合は'fill-"
+"pattern'プロパティをNULLにする"
 
 # 「切り抜き用」じゃなくて「クリッピング」の方がいい？
 #: src/goocanvasitemsimple.c:308
