added section on Cairo limits.
2008-10-11  Damon Chaplin  <damon@gnome.org>

	    * docs/coordinates.xml: added section on Cairo limits.

	    * README: updated home page URL.


svn path=/trunk/; revision=17

--- a/README
+++ b/README
@@ -5,7 +5,7 @@
 
 	         (a cairo-based canvas widget for GTK+)
 
-         GooCanvas Home Page : http://sourceforge.net/projects/goocanvas
+         GooCanvas Home Page : http://live.gnome.org/GooCanvas
 
 
 GooCanvas is similar in many ways to GnomeCanvas and FooCanvas.
