--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2008-10-11  Damon Chaplin  <damon@gnome.org>
+
+	* docs/coordinates.xml: added section on Cairo limits.
+
+	* README: updated home page URL.
+
 2008-10-05  Damon Chaplin  <damon@gnome.org>
 
 	* src/goocanvastext.c (goo_canvas_text_create_layout): don't turn off
