--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,14 @@
+2008-10-12  Armin Burgmeier  <armin@openismus.com>
+
+	* src/goocanvastable.c (goo_canvas_table_get_requested_area)
+	(goo_canvas_table_allocate_area): Request redraw of the table's
+	bounds, as GooCanvasItemSimple does, to fix incorrect drawing when
+	changing the table's width or height.
+
+	(goo_canvas_table_paint): Keep clipping to the allocated size when
+	drawing the children, so they are not rendered outside the allocated
+	area when the table is shrunk. #555093
+
 2008-10-11  Damon Chaplin  <damon@gnome.org>
 
 	* docs/coordinates.xml: added section on Cairo limits.
