--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-12-29  Damon Chaplin  <damon@gnome.org>
+
+	* POTFILES.in: added goocanvasgrid.c.
+
 2008-05-04  Damon Chaplin  <damon@gnome.org>
 
 	* ja.po: update from Kouhei Sutou.
